@@ -1,5 +1,9 @@
 2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/CFNumberFormatter.c: (CFNumberFormatterCopyProperty) Implemented.
+
+2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFRuntime.m:
 	* Source/CFNumber.m:
 	* Headers/CoreFoundation/CFNumber.h: Added CFBoolean.
